--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
         "@prisma/client": "^6.8.2",
         "@vercel/analytics": "^1.5.0",
         "axios": "^1.9.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.522.0",
         "next": "15.3.2",
         "prisma": "^6.8.2",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "swr": "^2.3.3"
+        "recharts": "^2.15.4",
+        "swr": "^2.3.3",
+        "tailwind-merge": "^3.3.1"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
@@ -28,6 +33,7 @@
         "eslint": "^9",
         "eslint-config-next": "15.3.2",
         "tailwindcss": "^4",
+        "tw-animate-css": "^1.3.4",
         "typescript": "^5"
     }
 }
